--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,18 @@
 button {
     width: 100%;
 }
+
+.icon {
+    padding: 0 20px
+}
+
+.btn-add {
+    width: 150px;
+    margin-top: 7px;
+    margin-left: 10px;
+
+}
+
+.field {
+    width: 100%
+}
